name: common
version: 0.1
cabal-version: >= 1.2
build-type: Simple

library
  ghc-options: -Werror -Wall -Wcompat -Wincomplete-uni-patterns -Widentities
  -- if impl(ghcjs -any)
  --   ghc-options:       -dedupe
  hs-source-dirs: src
  build-depends: base
               , obelisk-route
               , mtl
               , text
  default-extensions:
    TypeFamilies
    PolyKinds
  exposed-modules:
    Common.Api
    Common.Route
