name: frontend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , text
               , ghcjs-dom
               , containers
               , reflex-dom-contrib
  exposed-modules:
    Frontend
  ghc-options: -Werror -Wall -Wcompat -Wincomplete-uni-patterns -Widentities
  if impl(ghcjs -any)
    ghc-options:       -dedupe

executable frontend
  main-is: main.hs
  hs-source-dirs: src-bin
  build-depends: base
               , common
               , obelisk-frontend
               , obelisk-route
               , reflex-dom
               , obelisk-generated-static
               , frontend
  --TODO: Make these ghc-options optional
  ghc-options: -Werror -Wall -Wcompat -Wincomplete-uni-patterns -Widentities -threaded -rtsopts -with-rtsopts=-N
  if os(darwin)
     ghc-options: -dynamic
  if impl(ghcjs -any)
    ghc-options:       -dedupe
    cpp-options:       -DGHCJS_BROWSER
